--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
     <!-- Navbar -->
     <header class="bg-white fixed top-0 w-full z-50 shadow-md">
       <div
-        class="container-main flex flex-col md:flex-row justify-between items-center py-4"
+        class="container-main flex justify-between items-center py-4 md:py-6"
       >
-        <div class="flex flex-col items-center mb-80 md:mb-0">
+        <div class="flex items-center">
           <img
             src="https://i.ibb.co.com/mVLFLcJv/image.png"
             alt="Dewangga Consulting Logo"
-            class="h-10"
+            class="h-10 md:h-12"
           />
         </div>
         <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
@@ -349,7 +349,7 @@
             class="w-8 h-8"
             fill="none"
             stroke="currentColor"
-            view-box="0 0 24 24"
+            viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
@@ -417,7 +417,7 @@
       <!-- Hero Section -->
       <section id="home" class="relative">
         <div
-          class="container-main py-20 flex flex-col md:flex-row items-center justify-between space-y-12 md:space-y-0"
+          class="container-main py-12 md:py-20 flex flex-col md:flex-row items-center justify-between space-y-12 md:space-y-0"
         >
           <div class="md:w-1/2 text-center md:text-left fade-in-left">
             <h1
@@ -445,7 +445,7 @@
             <img
               src="https://i.ibb.co.com/84gtQXQL/image.png"
               alt="Hero Section"
-              class="rounded-3xl shadow-lg w-full h-auto"
+              class="rounded-3xl shadow-lg w-full h-auto max-w-md md:max-w-lg"
             />
           </div>
         </div>
@@ -455,14 +455,14 @@
       <section id="about" class="py-16 bg-white">
         <div class="container-main fade-in-up">
           <h2 class="section-heading">Tentang Kami</h2>
-          <div class="flex justify-center items-center">
+          <div class="flex justify-center items-center mt-8">
             <div
-              class="card flex flex-col items-center text-center p-60 sm:p-8 md:w-1000/500 lg:w-200/400"
+              class="card flex flex-col items-center text-center p-6 md:p-8 max-w-3xl"
             >
               <img
                 src="https://i.ibb.co.com/mVLFLcJv/image.png"
                 alt="Dewangga Consulting Logo"
-                class="w-500 mb-1"
+                class="w-64 mb-4"
               />
               <p class="text-gray-600 leading-relaxed flex-grow">
                 PT Devo Dewangga Indonesia adalah perusahaan konsultan yang
@@ -1013,7 +1013,7 @@
         <div class="container-main">
           <h2 class="section-heading">Galeri Dokumentasi</h2>
           <div
-            class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-90 gap-4 mt-8"
+            class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4 gap-4 mt-8"
           >
             <img
               src="https://i.ibb.co.com/234vk62k/image.png"
