--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <img
             src="https://i.ibb.co.com/mVLFLcJv/image.png"
             alt="Dewangga Consulting Logo"
-            class="h-10 md:h-12"
+            class="h-8 md:h-12"
           />
         </div>
         <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
@@ -342,7 +342,7 @@
           Konsultasi
         </button>
         <button
-          class="md:hidden text-primary focus:outline-none"
+          class="md:hidden text-primary focus:outline-none p-2 rounded-full hover:bg-gray-100 transition-colors"
           onclick="toggleMenu()"
         >
           <svg
@@ -620,7 +620,7 @@
                 class="w-16 h-16 mb-4 text-primary"
                 fill="none"
                 stroke="currentColor"
-                viewBox="0 0 24 24"
+                viewBox="0 0 12 24"
                 xmlns="http://www.w3.org/2000/svg"
               >
                 <path
