--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
             >Kontak</a
           >
         </nav>
-        <button
-          onclick="openModal('consulting-modal')"
+        <a
+          href="#contact"
           class="bg-primary text-white btn-main hover:bg-blue-900 hidden md:block"
         >
-          Konsultasi
-        </button>
+          HUBUNGI KAMI
+        </a>
         <button
           class="md:hidden text-primary focus:outline-none p-2 rounded-full hover:bg-gray-100 transition-colors"
           onclick="toggleMenu()"
@@ -403,12 +403,13 @@
             onclick="toggleMenu()"
             >Kontak</a
           >
-          <button
-            onclick="openModal('consulting-modal')"
+          <a
+            href="#contact"
+            onclick="toggleMenu()"
             class="text-left py-2 px-4 rounded-lg text-primary hover:bg-gray-100"
           >
-            Konsultasi
-          </button>
+            HUBUNGI KAMI
+          </a>
         </nav>
       </div>
     </header>
