--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
         transform: translateY(-5px);
         box-shadow: 0 15px 45px rgba(0, 0, 0, 0.12);
       }
+      
+      /* Updated: Removed fixed font-size for better responsiveness */
       .section-heading {
         font-family: "Playfair Display", serif;
-        font-size: 2.5rem;
         font-weight: 700;
         margin-bottom: 1rem;
         text-align: center;
@@ -379,7 +380,7 @@
             onclick="toggleMenu()"
             >Tentang</a
           >
-          <a
+            <a
             href="#services"
             class="py-2 px-4 rounded-lg hover:bg-gray-100"
             onclick="toggleMenu()"
@@ -421,8 +422,9 @@
           class="container-main py-12 md:py-20 flex flex-col md:flex-row items-center justify-between space-y-12 md:space-y-0"
         >
           <div class="md:w-1/2 text-center md:text-left fade-in-left">
+            <!-- Updated: Adjusted font-size for better mobile responsiveness -->
             <h1
-              class="text-4xl md:text-6xl font-extrabold leading-tight text-primary"
+              class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-primary"
             >
               DEVELOPING <br />
               SOLUTIONS FOR THE FUTURE
@@ -455,7 +457,8 @@
       <!-- About Us Section -->
       <section id="about" class="py-16 bg-white">
         <div class="container-main fade-in-up">
-          <h2 class="section-heading">Tentang Kami</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl">Tentang Kami</h2>
           <div class="flex justify-center items-center mt-8">
             <div
               class="card flex flex-col items-center text-center p-6 md:p-8 max-w-3xl"
@@ -484,7 +487,8 @@
       <!-- Our Values Section -->
       <section id="values" class="py-16">
         <div class="container-main text-center">
-          <h2 class="section-heading fade-in-up">Kenapa Memilih Kami?</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Kenapa Memilih Kami?</h2>
           <div
             class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 mt-12"
           >
@@ -605,7 +609,8 @@
       <!-- Services Section -->
       <section id="services" class="py-16 bg-white">
         <div class="container-main">
-          <h2 class="section-heading fade-in-up">Layanan Kami</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Layanan Kami</h2>
           <p
             class="text-center text-gray-600 max-w-2xl mx-auto mb-12 fade-in-up"
           >
@@ -740,7 +745,8 @@
       <!-- Clients Section -->
       <section id="clients" class="py-16">
         <div class="container-main text-center fade-in-up">
-          <h2 class="section-heading">Klien Terpercaya Kami</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl">Klien Terpercaya Kami</h2>
           <div class="scrolling-container">
             <div class="scroll-content">
               <div class="scroll-content-inner">
@@ -838,7 +844,8 @@
       <!-- Co-Founder Section -->
       <section id="cofounder" class="py-16 bg-white">
         <div class="container-main">
-          <h2 class="section-heading fade-in-up">Pendiri & Co-Founder</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Pendiri & Co-Founder</h2>
           <div
             class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 text-center mt-12"
           >
@@ -917,9 +924,8 @@
       <!-- Legalitas Section -->
       <section id="legalitas-section" class="py-16">
         <div class="container mx-auto px-4">
-          <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">
-            Legalitas Perusahaan
-          </h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Legalitas Perusahaan</h2>
           <div class="space-y-12">
             <div
               class="max-w-xl mx-auto space-y-4 text-gray-600 mb-8 text-left"
@@ -1012,7 +1018,8 @@
       <!-- Galeri Section -->
       <section id="gallery" class="py-16 bg-white">
         <div class="container-main">
-          <h2 class="section-heading">Galeri Dokumentasi</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl">Galeri Dokumentasi</h2>
           <div
             class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4 gap-4 mt-8"
           >
@@ -1071,7 +1078,8 @@
       <!-- Contact Section -->
       <section id="contact" class="py-16">
         <div class="container-main">
-          <h2 class="section-heading fade-in-up">Hubungi Kami</h2>
+          <!-- Updated: Applied responsive classes from Tailwind -->
+          <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Hubungi Kami</h2>
           <p
             class="text-center text-gray-600 max-w-2xl mx-auto mb-12 fade-in-up"
           >
