--- a/index.html
+++ b/index.html
@@ -66,14 +66,13 @@
         box-shadow: 0 15px 45px rgba(0, 0, 0, 0.12);
       }
       
-      /* Updated: Removed fixed font-size and width for better responsiveness */
       .section-heading {
         font-family: "Playfair Display", serif;
         font-weight: 700;
         margin-bottom: 1rem;
         text-align: center;
         color: #112d4e;
-        font-size: clamp(2rem, 5vw, 4rem); /* Responsive font size */
+        font-size: clamp(2rem, 5vw, 4rem); 
         line-height: 1.2;
       }
       .sub-heading {
@@ -89,7 +88,6 @@
         }
       }
 
-      /* Styles for continuous scroll */
       .scrolling-container {
         overflow: hidden;
         white-space: nowrap;
@@ -147,7 +145,6 @@
         position: relative;
       }
 
-      /* Blurry circles - Increased intensity */
       .blurry-circle {
         position: absolute;
         border-radius: 50%;
@@ -177,7 +174,6 @@
         height: 350px;
       }
 
-      /* Modal and Pop-up styles */
       .modal {
         display: none;
         position: fixed;
@@ -254,7 +250,6 @@
         background-color: #dbe2ef;
       }
 
-      /* Efek Fade Saat Scroll */
       .fade-in {
         opacity: 0;
         transition: opacity 0.8s ease-out, transform 0.8s ease-out;
@@ -280,7 +275,6 @@
         transform: translate(0, 0);
       }
 
-      /* Menambahkan delay untuk efek berurutan */
       .card-delay-1 {
         transition-delay: 0.1s;
       }
@@ -299,12 +293,10 @@
     </style>
   </head>
   <body class="bg-gray-50 text-gray-800 relative">
-    <!-- Blurry Background Circles -->
     <div class="blurry-circle top-left"></div>
     <div class="blurry-circle middle-right"></div>
     <div class="blurry-circle middle-left"></div>
 
-    <!-- Navbar -->
     <header class="bg-white fixed top-0 w-full z-50 shadow-md">
       <div
         class="container-main flex justify-between items-center py-4 md:py-6"
@@ -417,14 +409,13 @@
       </div>
     </header>
 
-    <main class="pt-28">
+    <main class="pt-28 md:pt-32"> <!-- Added padding top here -->
       <!-- Hero Section -->
       <section id="home" class="relative">
         <div
           class="container-main py-12 md:py-20 flex flex-col md:flex-row items-center justify-between space-y-12 md:space-y-0"
         >
           <div class="md:w-1/2 text-center md:text-left fade-in-left">
-            <!-- Updated: Adjusted font-size for better mobile responsiveness -->
             <h1
               class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-primary"
             >
@@ -459,7 +450,6 @@
       <!-- About Us Section -->
       <section id="about" class="py-16 bg-white">
         <div class="container-main fade-in-up">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl">Tentang Kami</h2>
           <div class="flex justify-center items-center mt-8">
             <div
@@ -489,7 +479,6 @@
       <!-- Our Values Section -->
       <section id="values" class="py-16">
         <div class="container-main text-center">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Kenapa Memilih Kami?</h2>
           <div
             class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 mt-12"
@@ -611,7 +600,6 @@
       <!-- Services Section -->
       <section id="services" class="py-16 bg-white">
         <div class="container-main">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Layanan Kami</h2>
           <p
             class="text-center text-gray-600 max-w-2xl mx-auto mb-12 fade-in-up"
@@ -747,7 +735,6 @@
       <!-- Clients Section -->
       <section id="clients" class="py-16">
         <div class="container-main text-center fade-in-up">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl">Klien Terpercaya Kami</h2>
           <div class="scrolling-container">
             <div class="scroll-content">
@@ -846,7 +833,6 @@
       <!-- Co-Founder Section -->
       <section id="cofounder" class="py-16 bg-white">
         <div class="container-main">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl fade-in-up">Pendiri & Co-Founder</h2>
           <div
             class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 text-center mt-12"
@@ -926,7 +912,6 @@
       <!-- Legalitas Section -->
       <section id="legalitas-section" class="py-16">
         <div class="container mx-auto px-4">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl">Legalitas Perusahaan</h2>
           <div class="space-y-12">
             <div
@@ -1020,7 +1005,6 @@
       <!-- Galeri Section -->
       <section id="gallery" class="py-16 bg-white">
         <div class="container-main">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl">Galeri Dokumentasi</h2>
           <div
             class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4 gap-4 mt-8"
@@ -1044,7 +1028,7 @@
               onclick="showImageModal(this.src)"
             />
             <img
-              src="https://i.ibb.co.com/HTgJpDwy/image.png"
+              src="https://i.ibb.com/HTgJpDwy/image.png"
               alt="Dokumentasi 4"
               class="w-full h-auto object-cover rounded-xl shadow-md cursor-pointer hover:scale-105 transition-transform"
               onclick="showImageModal(this.src)"
@@ -1080,7 +1064,6 @@
       <!-- Contact Section -->
       <section id="contact" class="py-16">
         <div class="container-main">
-          <!-- Updated: Applied responsive classes from Tailwind -->
           <h2 class="section-heading text-3xl md:text-4xl">Hubungi Kami</h2>
           <p
             class="text-center text-gray-600 max-w-2xl mx-auto mb-12 fade-in-up"
