--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div
           class="container-main py-12 md:py-20 flex flex-col md:flex-row items-center justify-between space-y-12 md:space-y-0"
         >
-          <div class="md:w-1/2 text-center md:text-left fade-in-left">
+          <div class="md:w-1/2 text-left fade-in-left">
             <h1
               class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-primary"
             >
@@ -1028,7 +1028,7 @@
               onclick="showImageModal(this.src)"
             />
             <img
-              src="https://i.ibb.com/HTgJpDwy/image.png"
+              src="https://i.ibb.co.com/HTgJpDwy/image.png"
               alt="Dokumentasi 4"
               class="w-full h-auto object-cover rounded-xl shadow-md cursor-pointer hover:scale-105 transition-transform"
               onclick="showImageModal(this.src)"
