--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
       </div>
     </header>
 
-    <main class="pt-28 md:pt-32"> <!-- Added padding top here -->
+    <main class="pt-28 md:pt-32">
       <!-- Hero Section -->
       <section id="home" class="relative">
         <div
@@ -417,13 +417,13 @@
         >
           <div class="md:w-1/2 text-left fade-in-left">
             <h1
-              class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-primary"
+              class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight text-primary max-w-full overflow-x-hidden"
             >
               DEVELOPING <br />
               SOLUTIONS FOR THE FUTURE
             </h1>
             <p
-              class="mt-4 text-lg md:text-xl text-gray-600 max-w-lg mx-auto md:mx-0"
+              class="mt-4 text-lg md:text-xl text-gray-600 max-w-lg mx-auto md:mx-0 max-w-full overflow-x-hidden"
             >
               Kami adalah perusahaan konsultan yang berfokus pada pengembangan
               sumber daya manusia, continuous improvement, dan sistem manajemen.
